stage 5 with JavaDoc