@@ -11,44 +11,43 @@ import java.util.List;
 import static primitives.Util.isZero;
 
 /**
- * Polygon class represents two-dimensional polygon in 3D Cartesian coordinate
- * system
+ * Polygon class represents a two-dimensional polygon in a 3D Cartesian coordinate system.
+ * The polygon is defined by a list of vertices and lies in a specific plane.
+ * It provides methods for various polygon-related operations, such as checking if a point lies on an edge
+ * and finding intersections with a ray.
  *
- * @author Dan
+ * @author Hadas_Shor, Nurit_Ezra
  */
 public class Polygon extends Geometry {
+
     /**
-     * List of polygon's vertices
+     * List of the polygon's vertices.
      */
     protected final List<Point> vertices;
+
     /**
-     * Associated plane in which the polygon lays
+     * Associated plane in which the polygon lies.
      */
     protected final Plane plane;
+
     /**
-     * The size of the polygon - the amount of the vertices in the polygon
+     * The size of the polygon - the number of vertices in the polygon.
      */
     private final int size;
 
     /**
-     * Polygon constructor based on vertices list. The list must be ordered by edge
-     * path. The polygon must be convex.
+     * Constructs a Polygon object from a list of vertices.
+     * The list must be ordered by edge path and the polygon must be convex.
      *
-     * @param vertices list of vertices according to their order by
-     *                 edge path
-     * @throws IllegalArgumentException in any case of illegal combination of
-     *                                  vertices:
+     * @param vertices The list of vertices ordered by edge path.
+     *                 The polygon must be convex and the vertices must lie in the same plane.
+     * @throws IllegalArgumentException if any of the following conditions are violated:
      *                                  <ul>
      *                                  <li>Less than 3 vertices</li>
-     *                                  <li>Consequent vertices are in the same
-     *                                  point
-     *                                  <li>The vertices are not in the same
-     *                                  plane</li>
-     *                                  <li>The order of vertices is not according
-     *                                  to edge path</li>
-     *                                  <li>Three consequent vertices lay in the
-     *                                  same line (180&#176; angle between two
-     *                                  consequent edges)
+     *                                  <li>Consecutive vertices are the same point</li>
+     *                                  <li>The vertices do not lie in the same plane</li>
+     *                                  <li>The vertices are not ordered by edge path</li>
+     *                                  <li>Three consecutive vertices are collinear (180° angle between two edges)</li>
      *                                  <li>The polygon is concave (not convex)</li>
      *                                  </ul>
      */
@@ -57,8 +56,7 @@ public class Polygon extends Geometry {
             throw new IllegalArgumentException("A polygon can't have less than 3 vertices");
         this.vertices = List.of(vertices);
         size = vertices.length;
-        // Generate the plane according to the first three vertices and associate the
-        // polygon with this plane.
+        // Generate the plane according to the first three vertices and associate the polygon with this plane.
         // The plane holds the invariant normal (orthogonal unit) vector to the polygon
         plane = new Plane(vertices[0], vertices[1], vertices[2]);
         if (size == 3) return; // no need for more tests for a Triangle
@@ -69,10 +67,9 @@ public class Polygon extends Geometry {
         Vector edge2 = vertices[0].subtract(vertices[size - 1]);
 
         // Cross Product of any subsequent edges will throw an IllegalArgumentException
-        // because of Zero Vector if they connect three vertices that lay in the same
-        // line.
+        // because of Zero Vector if they connect three vertices that lie in the same line.
         // Generate the direction of the polygon according to the angle between last and
-        // first edge being less than 180deg. It is hold by the sign of its dot product
+        // first edge being less than 180deg. It is held by the sign of its dot product
         // with the normal. If all the rest consequent edges will generate the same sign
         // - the polygon is convex ("kamur" in Hebrew).
         boolean positive = edge1.crossProduct(edge2).dotProduct(n) > 0;
@@ -80,7 +77,7 @@ public class Polygon extends Geometry {
             // Test that the point is in the same plane as calculated originally
             if (!isZero(vertices[i].subtract(vertices[0]).dotProduct(n)))
                 throw new IllegalArgumentException("All vertices of a polygon must lay in the same plane");
-            // Test the consequent edges have
+            // Test the consequent edges have the same orientation
             edge1 = edge2;
             edge2 = vertices[i].subtract(vertices[i - 1]);
             if (positive != (edge1.crossProduct(edge2).dotProduct(n) > 0))
@@ -88,34 +85,53 @@ public class Polygon extends Geometry {
         }
     }
 
+    /**
+     * Returns the normal vector to the polygon.
+     *
+     * @param point The point to calculate the normal for.
+     * @return The normal vector to the polygon.
+     */
     @Override
     public Vector getNormal(Point point) {
         return plane.getNormal(point);
     }
 
-
+    /**
+     * Checks if a given point is on the edge of the polygon defined by two other points.
+     *
+     * @param p The point to check.
+     * @param a One end of the edge.
+     * @param b The other end of the edge.
+     * @return true if the point lies on the edge, false otherwise.
+     */
     public boolean isPointOnEdge(Point p, Point a, Point b) {
-        // וקטור מ-A ל-P
+        // Vector from A to P
         Vector v1 = p.subtract(a);
 
-        // וקטור מ-A ל-B
+        // Vector from A to B
         Vector v2 = b.subtract(a);
 
-        // אם הווקטורים לא מקבילים, אז הנקודה לא על הצלע
+        // If the vectors are not parallel, the point is not on the edge
         if (!v1.crossProduct(v2).equals(Vector.ZERO)) {
             return false;
         }
 
-        // חישוב ריבוע האורך של הצלע AB
+        // Calculate the squared length of the edge AB
         double edgeLengthSquared = v2.dotProduct(v2);
 
-        // חישוב המכפלה הסקלרית של הווקטור מ-P ל-A עם הווקטור מ-A ל-B
+        // Calculate the dot product of the vector from P to A with the vector from A to B
         double dotProduct = v1.dotProduct(v2);
 
-        // אם המכפלה הסקלרית בין הווקטור מ-P ל-A לבין הווקטור מ-A ל-B נמצאת בין 0 לאורך הצלע, אז הנקודה נמצאת על הצלע
+        // If the dot product is between 0 and the squared length of the edge, the point is on the edge
         return dotProduct >= 0 && dotProduct <= edgeLengthSquared;
     }
 
+    /**
+     * Finds the intersection points of the polygon with a given ray.
+     *
+     * @param ray The ray to check for intersections.
+     * @return A list of intersection points, or null if no intersection is found.
+     */
     @Override
     public List<Point> findIntersections(Ray ray) {
         // Initialize a list to hold the normals of the edges of the polygonal base
@@ -126,17 +142,17 @@ public class Polygon extends Geometry {
         final Vector dir = ray.getDirection();
 
         // Calculate the normal vector for each edge of the polygonal base
-        Vector v1 = vertices.getFirst().subtract(startPoint);
+        Vector v1 = vertices.get(0).subtract(startPoint);
         for (Point p : vertices.subList(1, size)) {
             Vector v2 = p.subtract(startPoint);
             normals.add(v1.crossProduct(v2).normalize());
             v1 = v2;
         }
         // Add the normal for the edge connecting the last vertex to the first vertex
-        normals.add(vertices.getLast().subtract(startPoint).crossProduct(vertices.getFirst().subtract(startPoint)).normalize());
+        normals.add(vertices.get(size - 1).subtract(startPoint).crossProduct(vertices.get(0).subtract(startPoint)).normalize());
 
         // Determine if the ray direction is consistently on one side of all the polygon's edges
-        boolean allPositive = dir.dotProduct(normals.getFirst()) > 0;
+        boolean allPositive = dir.dotProduct(normals.get(0)) > 0;
         for (Vector normal : normals) {
             double s = dir.dotProduct(normal);
             // If the dot product is zero or if it changes sign, the ray does not intersect the polygon's base
